--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -5,7 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabFragment1">
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_hello"
+        android:text="Hello"
+        android:layout_marginTop="80dp" />
     <com.imangazaliev.circlemenu.CircleMenu
         android:id="@+id/circleMenu"
         android:layout_width="match_parent"
