--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -16,75 +16,94 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/Text_tutorial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다."
+                />
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Text_first"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/editbox_transparent_frame"
+                android:text="File Delete / Tutorial"
+                android:textAlignment="center"
+                android:textSize="15dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/topLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btnCancle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="false"
-                android:textAllCaps="false"
-                android:background="@drawable/imgbtn_rect_state"
-                android:text="Cancle" />
+            android:layout_marginTop="90dp"
+
+            >
+
+            <NumberPicker
+                android:id="@+id/remove_gestureNumberPicker"
+                android:layout_width="150dp"
+
+                android:layout_height="80dp">
+
+            </NumberPicker>
 
             <Button
-                android:id="@+id/btnReady"
+                android:id="@+id/btnRemove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:textAllCaps="false"
-                android:layout_marginLeft="160dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/imgbtn_rect_state"
-                android:text="Ready" />
+                android:text="Remove"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/ad_tutorial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/imgbtn_rect_state"
+                android:text="Tutorial"
+                android:textAllCaps="false" />
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/RawLinearLayout"
-            android:layout_below="@+id/topLinearLayout"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/emgDataTextView"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/btnReady"
-                android:layout_below="@+id/bEMG"
-                android:layout_marginTop="20dp"
+                android:id="@+id/Text_second"
+                android:layout_marginTop="180dp"
                 android:background="@drawable/editbox_transparent_frame"
-                android:text="Myo Status"
-                android:textSize="15dp" />
-
-            <com.jjoe64.graphview.GraphView
-                android:layout_width="match_parent"
-                android:layout_height="200dip"
-                android:id="@+id/graph"
-                android:layout_marginTop="10dp"/>
-
-            <TextView
-                android:id="@+id/maxData"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Myo MaxData"
+                android:text="Data Saving"
+                android:textAlignment="center"
                 android:textSize="15dp"
-                android:background="@drawable/editbox_transparent_frame"
                 />
+
+
         </LinearLayout>
         <LinearLayout
             android:id="@+id/SelectLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginLeft="@dimen/cnt_margin"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="110dp"
             android:layout_below="@+id/RawLinearLayout"
             android:layout_above="@+id/BottomLinearLayout">
             <NumberPicker
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/gestureNumberPicker">
 
             </NumberPicker>
@@ -131,6 +150,33 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/cnt_margin"
                 android:background="@drawable/imgbtn_default" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/Text_third"
+                android:layout_marginTop="270dp"
+                android:background="@drawable/editbox_transparent_frame"
+                android:text="Data Saving"
+                android:textAlignment="center"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginTop="300dp"
+           >
+            <NumberPicker
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+            </NumberPicker>
         </LinearLayout>
 
         <LinearLayout
