--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -16,48 +16,48 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
+            android:id="@+id/toptopLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_marginTop="30dp"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/Text_tutorial"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다."
-                />
+                android:layout_height="80dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="16dp"
+                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다.\n수행하고자 하는 항목의 타이틀을 클릭해서 설명을 보세요" />
+
             <TextView
+                android:id="@+id/Text_first"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/Text_first"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/editbox_transparent_frame"
                 android:text="File Delete / Tutorial"
                 android:textAlignment="center"
-                android:textSize="15dp"
-                />
+                android:textSize="15dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/topLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="90dp"
-
-            >
+            android:layout_below="@+id/toptopLinearLayout"
+            android:layout_marginBottom="10dp">
 
             <NumberPicker
                 android:id="@+id/remove_gestureNumberPicker"
                 android:layout_width="150dp"
-
                 android:layout_height="80dp">
 
             </NumberPicker>
 
             <Button
                 android:id="@+id/btnRemove"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
@@ -66,157 +66,203 @@
                 android:textAllCaps="false" />
 
             <Button
-                android:id="@+id/ad_tutorial"
-                android:layout_width="wrap_content"
+                android:id="@+id/btnTutorial"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/imgbtn_rect_state"
                 android:text="Tutorial"
                 android:textAllCaps="false" />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/Text_second"
-                android:layout_marginTop="180dp"
-                android:background="@drawable/editbox_transparent_frame"
-                android:text="Data Saving"
-                android:textAlignment="center"
-                android:textSize="15dp"
-                />
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/SelectLinearLayout"
+            android:id="@+id/AdaptiveSavingLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="@dimen/cnt_margin"
-            android:layout_marginTop="200dp"
-            android:layout_marginBottom="110dp"
-            android:layout_below="@+id/RawLinearLayout"
-            android:layout_above="@+id/BottomLinearLayout">
-            <NumberPicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/gestureNumberPicker">
+            android:layout_below="@+id/topLinearLayout"
+            >
 
-            </NumberPicker>
-            <View
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/view1"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:background="@drawable/imgbtn_default" />
-            <View
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/view2"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default" />
-            <View
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:id="@+id/view3"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default" />
-            <View
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:id="@+id/view4"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default" />
-            <View
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:id="@+id/view5"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default" />
+            <TextView
+                android:id="@+id/Text_second"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/editbox_transparent_frame"
+                android:text="Data Percent"
+                android:textAlignment="center"
+                android:textSize="15dp" />
+
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/AdaptiveNumberPickerLinearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_below="@+id/AdaptiveSavingLinearLayout"
+            android:layout_marginBottom="20dp">
+
+            <NumberPicker
+                android:id="@+id/AdapterNumberPicker"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp">
+
+            </NumberPicker>
+
+            <Button
+                android:id="@+id/btn_Sync"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/imgbtn_rect_state"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="60dp"
+                android:text="Sync"
+                android:textAllCaps="false" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/DataSavingLinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/AdaptiveNumberPickerLinearLayout"
+            android:layout_marginTop="10dp">
+
             <TextView
+                android:id="@+id/Text_third"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/Text_third"
-                android:layout_marginTop="270dp"
                 android:background="@drawable/editbox_transparent_frame"
                 android:text="Data Saving"
                 android:textAlignment="center"
                 android:textSize="15dp" />
 
+
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_marginTop="300dp"
-           >
+            android:id="@+id/SelectLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/DataSavingLinearLayout"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
             <NumberPicker
+                android:id="@+id/gestureNumberPicker"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/AdapterNumberPicker"
-                >
+                android:layout_height="80dp">
 
             </NumberPicker>
+            <ImageView
+                android:id="@+id/saveGesture_Image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/gesture_fist"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/imgbtn_default"
+                android:textColor="@android:color/black"
+                />
+            <View
+                android:id="@+id/view1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:background="@drawable/imgbtn_default"
+                android:textColor="@android:color/black" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default"
+                android:textColor="@android:color/black" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default"
+                android:text="Hello"
+                android:textColor="@android:color/black" />
+
+            <View
+                android:id="@+id/view4"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default"
+                android:text="Hello"
+                android:textColor="@android:color/black" />
+
+            <View
+                android:id="@+id/view5"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/cnt_margin"
+                android:background="@drawable/imgbtn_default"
+                android:text="Hello"
+                android:textColor="@android:color/black" />
         </LinearLayout>
+
+
 
         <LinearLayout
             android:id="@+id/BottomLinearLayout"
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="4"
 
-            android:orientation="horizontal">
+            android:layout_below="@id/SelectLinearLayout"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
 
-            <Button
-                android:id="@+id/btn_Sync"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:background="@drawable/imgbtn_rect_state"
-                android:text="Sync" />
+            android:weightSum="4">
+
+
 
             <TextView
                 android:id="@+id/gestureTextView"
-                android:layout_width="100dp"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="13dp"
                 android:layout_weight="2"
-                android:text="Connect Myo " />
+                android:gravity="center"
+                android:text="Connect Myo "
+                android:textSize="16dp" />
 
             <Button
                 android:id="@+id/btn_Save"
-                android:layout_width="40dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textAllCaps="false"
                 android:background="@drawable/imgbtn_rect_state"
-                android:text="Save" />
+                android:layout_marginLeft="20dp"
+                android:text="Save"
+                android:textAllCaps="false" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/RawLinearLayout"
+            android:layout_below="@+id/BottomLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/emgDataTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/editbox_transparent_frame"
+                android:text="Myo Status"
+                android:textSize="15dp" />
+        </LinearLayout>
     </RelativeLayout>
 
 </FrameLayout>
