--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -24,8 +24,8 @@
 
         <com.imangazaliev.circlemenu.CircleMenuButton
             android:id="@+id/camera_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="76dp"
+            android:layout_height="75dp"
             app:colorNormal="#4CAF50"
             app:colorPressed="#43A047"
             app:hintText="Camera"
