--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/redpinkblurgradation"
+    android:background="@color/BackgroundColor"
     tools:context=".MainActivity">
 
 
@@ -25,85 +25,37 @@
             android:id="@+id/emgDataTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/maxData"
             android:layout_alignParentStart="true"
             android:background="@android:drawable/editbox_dropdown_light_frame"
             android:layout_marginTop="50dp"
-            android:text="Myo Status"
-            android:textSize="15dp" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:onClick="onClickEMG"/>`
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:onClick="onClickDetect"/>`
-
-        <TextView
-            android:id="@+id/maxData"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Myo MaxData"
-            android:textSize="15dp"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:visibility="invisible"
-            />
-
-
-        <TextView
-            android:id="@+id/algorithm1"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Myo correlation distance"
-            android:background="@android:drawable/editbox_dropdown_light_frame"
-            android:visibility="invisible"
-            />
+            android:text="System Status"
+            android:textSize="20dp" />
 
 
     </LinearLayout>
-
-
-
-
-    <TextView
-        android:id="@+id/gestureTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:layout_above="@+id/BottomLinearLayout"
-        android:text="Connect Myo "
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:id="@+id/BottomLinearLayout"
-        android:layout_above="@id/BottomLinearLayout2"
+    <LinearLayout
+        android:id="@+id/gestureIndicatorLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
+        android:layout_height="wrap_content"
+        android:weightSum="3"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="50dp">
         <LinearLayout
-            android:id="@+id/gesturelinearlayout_tot1"
+            android:id="@+id/gesture12LinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="#ffffff"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:weightSum="2"
+            android:orientation="horizontal">
             <LinearLayout
                 android:id="@+id/gesturelinearlayout1"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -118,18 +70,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
                     android:text="Wi-fi" />
-
             </LinearLayout>
-
             <LinearLayout
                 android:id="@+id/gesturelinearlayout2"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -144,18 +96,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
                     android:text="Volume Down" />
-
             </LinearLayout>
-
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/gesture34LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:weightSum="2"
+            android:orientation="horizontal">
             <LinearLayout
                 android:id="@+id/gesturelinearlayout3"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -170,37 +130,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
                     android:text="Volume Up" />
-
             </LinearLayout>
-
-        </LinearLayout>
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/BottomLinearLayout2"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <LinearLayout
-            android:id="@+id/gesturelinearlayout_tot2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="#ffffff"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
             <LinearLayout
                 android:id="@+id/gesturelinearlayout4"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -215,18 +156,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Sound-Vibrate" />
-
+                    android:text="Sound - Vibrate" />
             </LinearLayout>
-
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/gesture56LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:weightSum="2"
+            android:orientation="horizontal">
             <LinearLayout
                 android:id="@+id/gesturelinearlayout5"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -235,24 +184,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="7"
-                    android:src="@drawable/gesture_wavein" />
+                    android:src="@drawable/gesture_fist" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
                     android:text="Screen Brighter" />
-
             </LinearLayout>
-
             <LinearLayout
                 android:id="@+id/gesturelinearlayout6"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="#ffffff"
+                android:background="@color/BackgroundColor"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:weightSum="10">
@@ -261,19 +210,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="7"
-                    android:src="@drawable/gesture_waveout" />
+                    android:src="@drawable/gesture_fist" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:textColor="@color/FontColor"
+                    android:textStyle="bold"
                     android:gravity="center"
-                    android:text="Screen Darker" />
-
+                    android:text="Screen Darker " />
             </LinearLayout>
-
         </LinearLayout>
+    </LinearLayout>
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/gestureTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="25dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/BottomLinearLayout"
+        android:text="Connect Myo "
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold" />
 
 </RelativeLayout>
