--- a/app/src/main/res/layout/fragment_tab_fragment2.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment2.xml
@@ -5,9 +5,212 @@
     android:layout_height="match_parent"
     tools:context=".TabFragment2">
 
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="@string/hello_blank_fragment" />-->
+    <LinearLayout
+        android:id="@+id/main_linearlayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="10"
+        android:orientation="vertical"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="50dp">
+        <RelativeLayout
+            android:id="@+id/showRelativelayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="5.5">
+            <TextView
+                android:id="@+id/textView_tutorial"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+
+                android:textSize="16dp"
+                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다.\n수행하고자 하는 항목의 타이틀을 클릭해서 설명을 보세요" />
+            <LinearLayout
+                android:id="@+id/topLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
+
+                <NumberPicker
+                    android:id="@+id/remove_gestureNumberPicker"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="15">
+
+                </NumberPicker>
+
+                <Button
+                    android:id="@+id/btnRemove"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:text="Remove"
+                    android:textAllCaps="false"
+                    android:layout_weight="10"/>
+
+                <Button
+                    android:id="@+id/btnTutorial"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:text="Tutorial"
+                    android:textAllCaps="false"
+                    android:layout_weight="10"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/AdaptiveNumberPickerLinearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
+
+                <NumberPicker
+                    android:id="@+id/AdapterNumberPicker"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="30dp">
+
+                </NumberPicker>
+
+                <Button
+                    android:id="@+id/btn_Sync"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="Sync"
+                    android:textAllCaps="false" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/SelectLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"
+                >
+
+                <NumberPicker
+                    android:id="@+id/gestureNumberPicker"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="10">
+
+
+                </NumberPicker>
+                <ImageView
+                    android:id="@+id/saveGesture_Image"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/gesture_1_nb"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"
+                    />
+                <View
+                    android:id="@+id/view1"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view4"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view5"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+            </LinearLayout>
+            <Button
+                android:id="@+id/btn_Save"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/imgbtn_rect_state"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:layout_below="@+id/SelectLinearLayout"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"/>
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/btn_saveScroll"
+            android:text="Data Save"
+            android:textColor="@color/BackgroundColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:background="@color/FontColor"/>
+        <Button
+            android:id="@+id/btn_syncScroll"
+            android:text="Data Sync"
+            android:textColor="@color/BackgroundColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:background="#9F9B9A"/>
+        <Button
+            android:id="@+id/btn_removeScroll"
+            android:text="Remove Data"
+            android:textColor="@color/BackgroundColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:background="@color/AccentColor"/>
+    </LinearLayout>
 
 </FrameLayout>
