--- a/app/src/main/res/layout/activity_systemcontrol.xml
+++ b/app/src/main/res/layout/activity_systemcontrol.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -228,6 +229,13 @@
         </LinearLayout>
     </LinearLayout>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_system"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_fileName="scaling_loader.json"
+            android:gravity="center"
+            android:layout_marginTop="370dp"/>
     <TextView
         android:id="@+id/gestureTextView"
         android:layout_width="wrap_content"
