--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".TabFragment1">
 
+
+
+
     <com.imangazaliev.circlemenu.CircleMenu
         android:id="@+id/circleMenu"
         android:layout_width="match_parent"
@@ -59,8 +62,62 @@
         <!--app:icon="@drawable/ic_edit" />-->
 
     </com.imangazaliev.circlemenu.CircleMenu>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnin"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/imgbtn_rect_state"
+        android:text="Op1"
+        android:textAllCaps="false"
+        android:layout_weight="10"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnin_2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/imgbtn_rect_state"
+        android:text="Op2"
+        android:textAllCaps="false"
+        android:layout_weight="10"
 
+        />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnin_3"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/imgbtn_rect_state"
+            android:text="Op3"
+            android:textAllCaps="false"
+            android:layout_weight="10"
 
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:gravity="bottom">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:lottie_fileName="scaling_loader.json"
+        android:layout_marginTop="400dp"/>
+        <!--
+        android:layout_gravity="bottom"
+       android:layout_marginBottom="20dp"
+        />
+        -->
+    </LinearLayout>
     <!-- TODO: Update blank fragment layout -->
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
