Splash,icon image change,Gallery Upgrade, No action emg threshold add

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -15,7 +15,7 @@
         android:background="@color/FontColor"
         android:textColor="@color/BackgroundColor"
         android:textAlignment="center"
-
+        android:gravity="center"
         android:text="Hello?"
         android:textSize="20dp"/>
     <ScrollView
